--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Portfolio</title>
 </head>
 
-<body style="background-image: url('Background_3.jpg'); background-size: 100% 200%;">
+<body style="background-image: url('Abstract-Galaxy2.png'); background-size: 100% 200%;">
     <div class="sidebar">
         <a href="#about">Over mij</a>
         <a href="#projects">Projecten</a>
