form now works, changed styling and added links to social

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             </p>
             <div class="project">
                 <a href="https://www.peterprint.nl/">PeterPrint</a>
-                <a href="#">LINK</a>
-                <a href="#">LINK</a>
-                <a href="#">LINK</a>
+                <a href="#">WIP</a>
+                <a href="#">WIP</a>
+                <a href="#">WIP</a>
             </div>
         </div>
     </div>
@@ -50,7 +50,7 @@
                 Heb je vragen voor mij? wil je mij wat laten weten? laat hier je contact gegevens achter met natuurlijk je vraag
                 erbij
             </p>
-            <form action="mail.php" method="post" class="form">
+            <form   action="https://formspree.io/f/mwkyzoyn" method="POST" class="form">
                 <div>
                     <label for="Name">Naam:</label>
                 </div>
@@ -62,7 +62,7 @@
                 <div>
                     <label for="Message">Vraag:</label>
                 </div>
-                <textarea class="big-input" id="Message" name="Message" type="text" required></textarea><br><br>
+                <textarea class="big-input" id="Message" name="Message" type="text"></textarea><br><br>
                 <div class="send">
                     <input type="submit" value="Send">
                 </div>
@@ -76,7 +76,7 @@
                 Download hier mijn CV
             </p>
             <div class="send">
-                <input type="submit" value="Download">
+                <a href="CV.pdf" download="CV" class="download">Download</a>
             </div>
         </div>
     </div>
@@ -84,10 +84,10 @@
 </body>
 <footer>
     <div class="footer">
-        <a class="social" href="#">
+        <a class="social" href="https://www.instagram.com/m.artwan/">
             <i class="fa-brands fa-instagram fa-5x"></i>
         </a>
-        <a class="social" href="#">
+        <a class="social" href="https://www.linkedin.com/in/martijn-van-dijk-515429193/">
             <i class="fa-brands fa-linkedin fa-5x"></i>
         </a>
     </div>
