--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         <div class="block">
             <h1>Over mij</h1>
             <p>
-                Hallo ik ben Martijn van Dijk, ik ben geboren op 30/11/2000 in Drachten. Ik heb mijn hele leven technische
-                dingen interessant gevonden. Ik was bij mij thuis ook altijd de persoon waar iedereen heen ging als er iets 
-                kapot was qua techniek, Ik deed dit altijd met veel plezier. Dit is dus ook de reden dat ik nu bezig ben om een
+                Hallo ik ben Martijn van Dijk, ik ben geboren op 30/11/2000 in Drachten. Ik heb mijn hele leven
+                technische
+                dingen interessant gevonden. Ik was bij mij thuis ook altijd de persoon waar iedereen heen ging als er
+                iets
+                kapot was qua techniek, Ik deed dit altijd met veel plezier. Dit is dus ook de reden dat ik nu bezig ben
+                om een
                 full stack develepor te worden.
             </p>
             <img src="profile.png" class="center">
@@ -47,10 +50,11 @@
         <div class="block">
             <h1>Contact</h1>
             <p>
-                Heb je vragen voor mij? wil je mij wat laten weten? laat hier je contact gegevens achter met natuurlijk je vraag
+                Heb je vragen voor mij? wil je mij wat laten weten? laat hier je contact gegevens achter met natuurlijk
+                je vraag
                 erbij
             </p>
-            <form   action="https://formspree.io/f/mwkyzoyn" method="POST" class="form">
+            <form action="https://formspree.io/f/mwkyzoyn" method="POST" class="form">
                 <div>
                     <label for="Name">Naam:</label>
                 </div>
@@ -73,11 +77,9 @@
         <div class="block">
             <h1>CV</h1>
             <p>
-                Download hier mijn CV
-            </p>
-            <div class="send">
-                <a href="CV.pdf" download="CV" class="download">Download</a>
-            </div>
+                Download hier mijn CV: 
+            </p><br>
+            <a href="CV.pdf" download="CV" class="download">Download</a>
         </div>
     </div>
 
